[gd_scene load_steps=10 format=3 uid="uid://cao1ivxo860t2"]

[ext_resource type="Script" path="res://minions/minion.gd" id="1_ywsbo"]
[ext_resource type="PackedScene" uid="uid://c2a3uw6r78k4d" path="res://minions/projectile.tscn" id="2_6tinm"]
[ext_resource type="Texture2D" uid="uid://cquypxilkn1ej" path="res://assets/minion/grunt_down.png" id="3_6ox4i"]
[ext_resource type="PackedScene" uid="uid://ckytalr2gjoym" path="res://healthbar/health_component.tscn" id="3_qdnh8"]
[ext_resource type="Texture2D" uid="uid://1v26n3xe21ca" path="res://assets/minion/grunt_west.png" id="4_417wv"]
[ext_resource type="AudioStream" uid="uid://dw8yg35mwh6gu" path="res://assets/beat_hit.wav" id="4_cvsl8"]
[ext_resource type="Texture2D" uid="uid://bdoegk3hpy3b0" path="res://assets/minion/grunt_north.png" id="5_ik7qy"]

[sub_resource type="SpriteFrames" id="SpriteFrames_eqvgy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_6ox4i")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_417wv")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_6ox4i")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_ik7qy")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rmvj2"]
radius = 13.0
height = 42.0

[node name="Minion" type="CharacterBody2D"]
script = ExtResource("1_ywsbo")
ranged = false
projectile_scene = ExtResource("2_6tinm")
aggro_range = 100
attack_range = 50

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-0.250001, -0.249999)
scale = Vector2(0.5, 0.505)
sprite_frames = SubResource("SpriteFrames_eqvgy")
animation = &"walk_right"

[node name="NavigationHandler" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="NavigationHandler"]
path_desired_distance = 5.0
target_desired_distance = 5.0
path_max_distance = 600.0
path_postprocessing = 1
simplify_path = true
simplify_epsilon = 3.542
debug_use_custom = true
debug_path_custom_color = Color(0.623439, 0.000276439, 0.285134, 1)

[node name="Timer" type="Timer" parent="NavigationHandler"]
wait_time = 1.022
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_rmvj2")

[node name="HealthComponent" parent="." instance=ExtResource("3_qdnh8")]

[node name="AttackTimer" type="Timer" parent="."]

[node name="HitAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_cvsl8")
volume_db = -5.0

[connection signal="velocity_computed" from="NavigationHandler/NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="timeout" from="NavigationHandler/Timer" to="." method="_on_timer_timeout"]
[connection signal="health_destroyed" from="HealthComponent" to="." method="_on_health_component_health_destroyed"]
